docs(core): note the confirmed JDK 27-ea boundary on the FdBig bridge
Reproduced on Temurin 27+35: the Unsafe write to AccessibleObject.override
no longer takes effect, so isAccessible() stays false and Lookup.unreflect
cannot reach the package-private FDBigInteger. This defeats both this bridge
and the old --add-exports export hack (same primitive). Only a launch-time
--add-opens works there, which a library cannot impose on consumers; the
durable JDK 27+ fix is a self-contained bignum. The non-blocking mrjar-smoke
27-ea CI job tracks this.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01S8vZt12JbC8o8rGyHYTPrE